Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjIntegerField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Integer
        integer var = 5
        return var
    end
end